--- a/app/src/main/res/layout/fragment_large_image.xml
+++ b/app/src/main/res/layout/fragment_large_image.xml
@@ -18,7 +18,7 @@
 
     <SeekBar
         android:id="@+id/offsetX"
-        android:minHeight="48dp"
+        android:minHeight="32dp"
         android:max="100"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -30,14 +30,28 @@
 
     <SeekBar
         android:id="@+id/offsetY"
-        android:minHeight="48dp"
+        android:minHeight="32dp"
         android:max="100"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <ImageView
-        android:id="@+id/preview"
+    <TextView
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/scale"/>
+
+    <SeekBar
+        android:id="@+id/scale"
+        android:minHeight="32dp"
+        android:max="100"
+        android:progress="50"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <com.scurab.android.nativeimageapp.PreviewImageView
+        android:id="@+id/preview"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <ImageView
